--- a/Test/Cargo.toml
+++ b/Test/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "vim"
+name = "Test"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-termion = "4.0.0"
-crossterm="0.27.0"
+termion="4.0.0"
+clap="2"
+crossterm = "0.27.0"
+rand="0.8.5"
