--- a/vira/Cargo.toml
+++ b/vira/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vim"
+name = "vira"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 termion = "4.0.0"
 crossterm="0.27.0"
+clap = { version = "4.5.4", features = ["derive"] }
+
