--- a/vira/Cargo.toml
+++ b/vira/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 termion = "4.0.0"
 crossterm="0.27.0"
-clap = { version = "4.0.32", features = ["derive"] }
+colored = "2.1.0"
+
+
 
